# gtimelapse

./: LICENSE  Makefile  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  libtool
m4/: gp-check-library.m4
src/: Makefile  Makefile.am  Makefile.in  globals.cpp  globals.h  gphotofunctions.cpp  gphotofunctions.h  gtimelapse.cpp  gtimelapse.h  icon.xpm  make_vid
src/.deps/: gtimelapse-globals.Po  gtimelapse-gphotofunctions.Po  gtimelapse-gtimelapse.Po  timelapse-globals.Po  timelapse-gphotofunctions.Po  timelapse-timelapse.Po
